Refactor: Extract item processing to state